MoreROS/dev_ws/log/build_2022-04-10_22-33-12/power_supply/stderr.log
  File "/home/ubuntu/dev_ws/install/power_supply/lib/python3.8/site-packages/power_supply/power_supply_controller.py", line 61
    if self.isOn[msg.ps_num] = False:
                             ^
SyntaxError: invalid syntax

